--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_secure_storage: ^7.0.1
   intl: ^0.18.0
   flutter_html: ^2.2.1
+  internet_connection_checker: ^0.0.1+4
+  overlay_support: ^2.1.0
+  connectivity_plus: ^2.1.0
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
